[project]
name = "lunchbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "instagrapi~=2.2.1",
    "pillow~=11.3.0",
    "python-dotenv~=1.1.1",
    "pytz~=2025.2",
    "requests~=2.32.4",
    "schedule~=1.2.2",
]
